# launch-pi

./: README.md  pyproject.toml
scripts/: run.sh
src/: launch_pi-app.py
src/launch_pi/: __main__.py  app.py  config.py
src/launch_pi/launchbox/: __init__.py  game.py  models.py  platform.py  schemas.py
src/launch_pi/retropie/: __init__.py  game.py  models.py  platform.py  schemas.py
src/launch_pi/shared/: image.py  models.py  scrape.py
